fix wraping reviews

--- a/expert_submission_02/src/scripts/views/pages/detail/style.css
+++ b/expert_submission_02/src/scripts/views/pages/detail/style.css
@@ -143,15 +143,13 @@
 }
 
 .profile-user {
+    min-width: 80px;
     margin: 0 16px;
-    align-items: center;
-    text-align: center;
     font-family: arial, sans-serif;
     position: relative;
     text-align: center;
     font-weight: 600;
 }
-
 .profile-user .avatar {
     display: block;
     background-color: grey;
@@ -159,10 +157,17 @@
     padding: 1rem;
     border-radius: 50%;
     height: 48px;
-    margin: 0 0 8px;
+    margin: 0 auto;
     width: 48px;
 }
-
+.profile-user span {
+    max-width: 80px;
+    margin-top: 8px;
+    overflow: hidden;
+    display: inherit;
+    text-overflow: ellipsis;
+    
+}
 .reviews-user span {
     font-size: .875rem;
     font-weight: 500;
@@ -170,7 +175,7 @@
 }
 
 .reviews-user p {
-    margin: 8px 0;
+    margin: 5px 0 0;
     line-height: 24px;
     max-height: 72px;
     font-size: 1rem;
