--- a/expert_submission_02/src/scripts/views/pages/home/style.css
+++ b/expert_submission_02/src/scripts/views/pages/home/style.css
@@ -52,13 +52,14 @@
 }
 
 .catalog-item a {
-    min-width: 44px;
+    width: 100%;
     text-decoration: none;
     display: inline-block;
-    min-height: 44px;
-    margin: 1rem 1rem 0 1rem;
 }
-
+.catalog-item h2{
+    min-height: 44px;
+    padding: 1rem 1rem 0 1rem;
+}
 
 .rating {
     font-weight: 600;
