--- a/expert_submission_02/src/styles/main.css
+++ b/expert_submission_02/src/styles/main.css
@@ -46,7 +46,6 @@ body {
 h2,
 h3 {
   color: #424242;
-  margin-bottom: 1rem;
   font-family: Arial, Helvetica, sans-serif;
 }
 
